--- a/Labs/lab02.Rmd
+++ b/Labs/lab02.Rmd
@@ -550,16 +550,16 @@ Write a k = 1 nearest neighbor algorithm using the Euclidean distance function. 
 #'
 #' TO-DO: This function is a k=1 nearest neighbor algorithm. We are looking for the shortest distance between a point and 1 other point. This is a classification method for estimating the likelihood that a data point will become a member of one group or another based on what group the data points nearest to it belong to. In our case once again only using 1 data point.
 #'
-#' @param Xinput      
-#' @param y_binary    
-#' @param Xtest       
-#' @return            
+#' @param Xinput      Dataset with all features nxp matrix
+#' @param y_binary    n long vector of classifications for Xinput
+#' @param Xtest       Test dataset with features nxp matrix -> no classification we are doing this
+#' @return            Returns a n long vector of classifications for Xtest
 nn_algorithm_predict = function(Xinput, y_binary, Xtest){
 
-  yhat = arrary(NA,nrow(Xtest))
+  yhat = array(NA,nrow(Xtest))
   for(istar in 1:nrow(Xtest)){
     
-    y_hat[istar] = y_binary[which.min(rowSums(t(t(Xinput)-Xtest[istar,])^2))]
+    yhat[istar] = y_binary[which.min(rowSums(t(t(Xinput)-Xtest[istar,])^2))]
     
   }
   yhat
@@ -569,11 +569,19 @@ nn_algorithm_predict = function(Xinput, y_binary, Xtest){
 Write a few tests to ensure it actually works:
 
 ```{r}
-X_simple = data.frame(
- response = factor(c(0, 0, 0, 1, 1, 1)), #nominal
- first_feature = c(1, 1, 2, 3, 3, 4),    #continuous
- second_feature = c(1, 2, 1, 3, 4, 3)    #continuous
+X_input = data.frame(
+  
+  p1 = c(1, 1, 2, 3, 3, 4),    #continuous
+  p2 = c(1, 2, 1, 3, 4, 3)    #continuous
 )
+y_bin = factor(c(1, 2, 0, 1, 1, 1))
+
+X_test = data.frame(
+  p1Test = c(2, 3, 4, 3, 2, 5),    #continuous
+  p2Test = c(1, 5, 3, 2, 1, 2)    #continuous
+)
+
+nn_algorithm_predict(Xinput = X_input, y_binary = y_bin, Xtest = X_test)
 
 ```
 
